--- a/src/Main/Main.css
+++ b/src/Main/Main.css
@@ -10,6 +10,6 @@
     width: 22rem;
     height: 14rem;
     border-radius: 50%;
-    background-color: rgb(205, 254, 236);
+    background-color: #cdfeec;
     filter: blur(72px);
 }
