--- a/src/Components/Buttons/Share/Share.css
+++ b/src/Components/Buttons/Share/Share.css
@@ -8,7 +8,7 @@
   gap: 10px;
   letter-spacing: 2.5px;
   text-transform: uppercase;
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
 
 .btn,
